deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  labels:
    app: opa
  namespace: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
      name: opa
    spec:
      serviceAccountName: opa
      containers:
      - name: opa-server
        image: openpolicyagent/opa:0.60.0
        ports:
        - name: https
          containerPort: 8181
        args:
        - "run"
        - "--ignore=.*"  # exclude hidden dirs created by Kubernetes
        - "--server"
        - "/policies"
        volumeMounts:
        - readOnly: true
          mountPath: /policies
          name: test-policy
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /health
            scheme: HTTP              # assumes OPA listens on localhost:8181
            port: 8181
          initialDelaySeconds: 5      # tune these periods for your environment
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health?bundle=true  # Include bundle activation in readiness
            scheme: HTTP
            port: 8181
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: kube-mgmt
        image: openpolicyagent/kube-mgmt:2.0.1
        args:
          # - "--replicate-cluster=v1/namespaces"
          - "--replicate=v1/configmaps"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "0.5"
      volumes:
      - name: test-policy
        configMap:
          name: test-policy

---
kind: Service
apiVersion: v1
metadata:
  name: opa
  labels:
    app: opa
  namespace: opa
spec:
  type: ClusterIP
  selector:
    app: opa
  ports:
    - name: https
      protocol: TCP
      port: 8181
      targetPort: 8181
---
