ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-ingress
  namespace: opa
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
spec:
  tls:
    - hosts: 
        - <hostName>
      secretName: <secretName>
  ingressClassName: internal-nginx
  rules:
    - host: <hostName>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: opa
                port:
                  number: 8181
